infra/kustomize-helm/argocd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.atoca.house
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
  - hosts:
    - argocd.atoca.house
    secretName: argocd-tls
